syntax="proto3";

package pb.rest_api_service;

option go_package = "pb/rest_api_service";

message StoryFindAllRequest {
    string sort_by = 1;
    string keyword = 2;
    string cursor = 3;
    int64 limit = 4;
}

message StoryByIDRequest {
    int64 id = 1;
}

message StoryCreateRequest {
    string title = 1;
    string content = 2;
    int64 author_id = 3;
}

message StoryUpdateRequest {
    int64 id = 1;
    string title = 2;
    string content = 3;
    int64 author_id = 4;
}
